app/assets/stylesheets/main.css
/* for during desktop development only */
/* Media query so it doesn't leave empty space on phones */
@media only screen and (min-width: 1025px) {
  body {
    position: relative;
    max-width: 320px;
  }
}

.container-fluid {
  padding-left: 0px;
  padding-right: 0px;
}

header,
footer {
  background-color: #4e184d;
}

header {
  margin-bottom: 10px;
}

footer {
  padding-top: 5px;
  padding-bottom: 5px;
}

footer form {
  margin-bottom: 0px;
}

h1 {
  color: #ffffff;
  font-size: 16px;
  display: inline;
  padding-left: 20%;
}

.headerLeftLink {
  margin-bottom: 5px;
  margin-left: 5px;
}

.headerRightLink {
  float: right;
  margin-top: 5px;
  margin-right: 5px;
  margin-bottom: 5px;
}

#tagTitle {
  padding-left: 40%;
}

#hubbub-new-tag-submit {
  position: relative;
  bottom: 5px;
}

/* Put some space between the new tag form and the existing tags */
#newTagFields {
  padding-bottom: 20px;
}

@media all and (max-width: 480px) {
  #newTagFields .ui-input-text {
    width: 100%;
  }
  #newTagFields > .ui-btn {
    width: 100%;
  }
}

/* feed items */

.feedItem {
  clear: both;
  position: relative;
  border-top: 1px solid #ccc;
  
  overflow: hidden;
}
.feedItem .source {
  float: left;
  font-size: 12px;
  padding: 2px;
  margin-right: 6px;
  text-shadow: none;
}
.feedItem .item-body {
  font-size: 13px;
  line-height: 18px;
  padding: 4px 15px;
}
.feedItem img {
  max-width: 100%;
}
.feedItem label {
  font-weight: bold;
  display: inline;
}
.gmailHeader {
  padding-bottom: 10px;
}
.feedItem .feeditem-expand-button.ui-btn {
  margin: 0;
}
.feeditem-expand-button {
  width: 100% !important;
  position: absolute;
  bottom: 0;
}
.item-actions {
  font-size: 12px;
  line-height: 18px;
}
.item-actions.float {
  display: inline-block;
  float: right;
  margin-left: 4px;
  margin-top: 4px;
}
.item-actions.over {
  display: inline-block;
  position: absolute;
  top: 4px;
  right: 0;
}

.feedItemControls .btn {
  height: 30px;

  position: relative;
  right: 43%;
  width: 143% !important;
}

/* styles for tag view items in a feed */

.feedTagSet .feed-tag-set-item {
  float: left;
  background: #ccc;
  padding: 0 4px;
  color: black;
  margin-right: 10px;
  margin-top: 3px;
}

.feedTagSet .feed-tag-set-item.last {
  float: none;
  display: inline-block;
}

/* styles specific to the source of a feed item */

/*
 * Color key:
 * Twitter - (light blue) #80e5ff
 * Gmail - (red) #d56d50
 * Imgur - (green) #71aa55
 * Facebook - (dark blue) #7373ff
 */
.feedItem.read {
  background: #e0e0e0;
}

.feedItem.twitter {
  border-top-color: #80e5ff;
}
.feedItem.twitter .source {
  background: #80e5ff;
  color: black;
}

.feedItem.imgur {
  border-top-color: #71aa55;
}
.feedItem.imgur img {
  margin-top: 4px;
}
.feedItem.imgur .source {
  background: #71aa55;
  color: black;
}

.feedItem.gmail {
  border-top-color: #d56d50;
}
.feedItem.gmail .source {
  background: #d56d50;
}

.feedItem.facebook {
  border-top-color: #7373ff;
}

.feedItem.facebook .source {
  background: #7373ff;
}

/* Service list page styles */

#service-list {
  padding: 0;
  margin: 0;
}

#service-list li {
  margin: 10px;
  padding: 0;
  list-style-type: none;
}

/* Filter page styles */

#services {
  padding-bottom: 30px;
}

.checkbox {
  margin-left: 10px;
  padding-left: 25px;
  padding-top: 10px;
  padding-bottom: 10px;
  background: #ccc;
  border-radius: 4px 4px 4px 4px;
}

#filterSearch {
  padding-bottom: 20px;
}

#services img {
  opacity: 0.4;
  border: 2px solid white;
  padding: 4px;
}
#services .selectedService img {
  opacity: 1;
  /* TODO Change this color to something better, and prettify it */
  border: 2px solid orange;
}

#contentForm {
  padding-left: 5px;
}

/* First button in the footer */
#executeFilter,
#hubbub-tag-ok-button {
  margin-left: 5px;
}

#filterToSave {
  margin-bottom: 20px;
}

/* filter screen footer */

.ui-footer {
  padding: 4px;
}

.ui-hidden-accessible {
  display: none;
}

/* signup/login */

.error-messages {
  background: #efcad3;
  margin: 8px 0;
  padding: 4px;
}

/* Adapted from:
 * https://github.com/twitter/bootstrap/issues/2351
 */
/* BUTTON GROUPS (VERTICAL) */
/* ------------------------ */

/* Make the div behave like a button */
.btn-group-vertical {
  display: block;
}

/* Space out series of button groups */
.btn-group-vertical + .btn-group-vertical {
  margin-top: 5px;
}

/* Float them, remove border radius, then re-add to first and last elements */
.btn-group-vertical .btn {
  display: block;
  width: 100%;
  margin-top: -1px;
  padding-top: 5px;
  border-radius: 0px 0px 0px 0px;
}

.btn-group-vertical .btn.btn-large {
  padding-top: 10px;
}
/* Set corners individual because sometimes a single button can be in a .btn-group-vertical and we need :first-child and :last-child to both match */
.btn-group-vertical .btn:first-child {
  /*margin-top: 0;*/ /* Replaced by the HACK (sorry!) */
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;

  /*height: 20px;*/
  text-align: center;
  position: relative;
  right: 42%;
  padding-left: 0px;
  padding-right: 0px;
  width: 142% !important;

  /**
   * HACK: Make the buttons flush with the top of the feed item
   * TODO Do this elegantly
   */
  margin-top: -20px;
}
.btn-group-vertical .btn:last-child {
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
}

/* On hover/focus/active, bring the proper btn to front */
.btn-group-vertical .btn:hover,
.btn-group-vertical .btn:focus,
.btn-group-vertical .btn:active,
.btn-group-vertical .btn.active {
  z-index: 2;
}

/* Login and Registration forms */
#noButtonsHeader {
  padding-left: 37%;
}

